[gd_scene load_steps=28 format=3 uid="uid://bhtsgp57yqesx"]

[ext_resource type="Script" uid="uid://dag4ml2yfo5hk" path="res://assets/entities/player/player.gd" id="1_ucweq"]
[ext_resource type="Script" uid="uid://c7c8dbf4gjr5a" path="res://addons/swivel/scripts/swivel.gd" id="2_08t41"]
[ext_resource type="Script" uid="uid://dtv0gpk5iy5tr" path="res://addons/input_receivers/scripts/key_input_vector.gd" id="3_1ie0h"]
[ext_resource type="Script" uid="uid://cudkjbg3cjtwp" path="res://src/usable_manager.gd" id="3_xy2vv"]
[ext_resource type="Script" uid="uid://b1rqvgva11iaq" path="res://addons/input_receivers/scripts/mouse_velocity_input_vector.gd" id="4_5u6hq"]
[ext_resource type="PackedScene" uid="uid://2icbl7w0ihxh" path="res://assets/prefabs/grabby_hand.tscn" id="4_ovg4i"]
[ext_resource type="Script" uid="uid://bf3v7koycd15q" path="res://src/quake_movement_component.gd" id="5_d4qa6"]
[ext_resource type="Script" uid="uid://wcqwkfjsc6e5" path="res://addons/state_o_things/scripts/state_machine.gd" id="7_ss7kx"]
[ext_resource type="Script" uid="uid://bsc3fnvorf011" path="res://addons/state_o_things/scripts/state.gd" id="8_1murt"]
[ext_resource type="Script" uid="uid://oeywxoyngute" path="res://assets/entities/player/player_state.gd" id="9_5sj0x"]
[ext_resource type="PackedScene" uid="uid://1htf0iavn8sp" path="res://assets/ui/client_hud.tscn" id="11_7wli1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ovg4i"]
radius = 0.4
height = 1.6

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_ovg4i"]

[sub_resource type="Resource" id="Resource_j0oqr"]
script = ExtResource("9_5sj0x")
entries = Array[int]([5])
processes = Array[int]([2, 3])
process_transitions = Array[int]([0, 2])
actions = Array[int]([0, 1, 2, 4])
name = &"Idle"
connections = Array[StringName]([&"Walking", &"Jumping", &"Falling", &"Dashing"])
metadata/_custom_type_script = "uid://oeywxoyngute"

[sub_resource type="Resource" id="Resource_ovg4i"]
script = ExtResource("9_5sj0x")
entries = Array[int]([5])
processes = Array[int]([0, 2, 3])
process_transitions = Array[int]([2, 1])
actions = Array[int]([0, 1, 2, 3, 4])
name = &"Walking"
connections = Array[StringName]([&"Falling", &"Jumping", &"Idle", &"Dashing"])
metadata/_custom_type_script = "uid://oeywxoyngute"

[sub_resource type="Resource" id="Resource_7wli1"]
script = ExtResource("9_5sj0x")
entries = Array[int]([0])
processes = Array[int]([1, 2, 3])
process_transitions = Array[int]([3, 4])
actions = Array[int]([1, 2, 3])
name = &"Jumping"
connections = Array[StringName]([&"Falling", &"Dashing", &"Walking", &"Idle", &"BatjumpStarting"])
metadata/_custom_type_script = "uid://oeywxoyngute"

[sub_resource type="Resource" id="Resource_5sj0x"]
script = ExtResource("9_5sj0x")
processes = Array[int]([1, 2, 3])
process_transitions = Array[int]([4, 5])
actions = Array[int]([0, 1, 2, 3])
name = &"Falling"
connections = Array[StringName]([&"Walking", &"Jumping", &"Idle", &"GrabbingLedge", &"Dashing", &"BatjumpStalling"])
metadata/_custom_type_script = "uid://oeywxoyngute"

[sub_resource type="Resource" id="Resource_xy2vv"]
script = ExtResource("9_5sj0x")
entries = Array[int]([1, 2, 3, 4, 5, 6])
actions = Array[int]([0])
vfx_world_model_lock_orientation = true
name = &"GrabbingLedge"
connections = Array[StringName]([&"Jumping", &"Falling"])
metadata/_custom_type_script = "uid://oeywxoyngute"

[sub_resource type="Resource" id="Resource_r4dfn"]
script = ExtResource("9_5sj0x")
entries = Array[int]([6])
processes = Array[int]([4, 3])
process_transitions = Array[int]([6, 7])
name = &"Dashing"
connections = Array[StringName]([&"Falling", &"Walking", &"Idle", &"WallRunning"])
metadata/_custom_type_script = "uid://oeywxoyngute"

[sub_resource type="Resource" id="Resource_70kwc"]
script = ExtResource("9_5sj0x")
entries = Array[int]([7, 5])
processes = Array[int]([5, 3])
process_transitions = Array[int]([8])
actions = Array[int]([0])
vfx_world_model_lock_orientation = true
name = &"WallRunning"
connections = Array[StringName]([&"Falling", &"WallJumping", &"Idle", &"Walking"])
metadata/_custom_type_script = "uid://oeywxoyngute"

[sub_resource type="Resource" id="Resource_yywfu"]
script = ExtResource("9_5sj0x")
entries = Array[int]([9])
processes = Array[int]([1, 3, 6])
process_transitions = Array[int]([5, 7, 4])
actions = Array[int]([3, 0])
vfx_world_model_lock_orientation = true
name = &"WallJumping"
connections = Array[StringName]([&"WallRunning", &"Falling", &"Walking", &"Idle", &"Dashing", &"GrabbingLedge", &"BatjumpStalling"])
metadata/_custom_type_script = "uid://oeywxoyngute"

[sub_resource type="Resource" id="Resource_pcd0u"]
script = ExtResource("9_5sj0x")
processes = Array[int]([7, 3])
actions = Array[int]([1, 2])
name = &"BatjumpStalling"
connections = Array[StringName]([&"Batjumping"])
metadata/_custom_type_script = "uid://oeywxoyngute"

[sub_resource type="Resource" id="Resource_w3p2j"]
script = ExtResource("9_5sj0x")
entries = Array[int]([0])
processes = Array[int]([1, 2, 3])
process_transitions = Array[int]([4, 5])
actions = Array[int]([1, 2, 3])
physics_gravity_factor = 0.4
name = &"Batjumping"
connections = Array[StringName]([&"Dashing", &"Walking", &"Idle", &"BatjumpStarting", &"GrabbingLedge"])
metadata/_custom_type_script = "uid://oeywxoyngute"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7wli1"]
transparency = 1
blend_mode = 1
depth_draw_mode = 1
shading_mode = 0
diffuse_mode = 1
specular_mode = 2
disable_ambient_light = true
disable_fog = true
disable_specular_occlusion = true

[sub_resource type="PrismMesh" id="PrismMesh_j0oqr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5u6hq"]
albedo_color = Color(1, 0.10980392, 0.105882354, 1)

[sub_resource type="PrismMesh" id="PrismMesh_5u6hq"]

[node name="Player" type="CharacterBody3D" groups=["entities", "players"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_ucweq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ovg4i")

[node name="Swivel" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4335005, 0)
script = ExtResource("2_08t41")
metadata/_custom_type_script = "uid://c7c8dbf4gjr5a"

[node name="UsableManager" type="Node3D" parent="Swivel" node_paths=PackedStringArray("_initial_usable")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.175)
script = ExtResource("3_xy2vv")
_initial_usable = NodePath("")
metadata/_custom_type_script = "uid://hurmpohm02p4"

[node name="Camera3D" type="Camera3D" parent="Swivel"]
cull_mask = 121
current = true

[node name="GrabbyHand" parent="Swivel" instance=ExtResource("4_ovg4i")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -1.509958e-07, 0, 1, 0, 1.509958e-07, 0, -1, 0, 0, 0)

[node name="BodyRaycasts" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="WallRunChecks" type="Area3D" parent="BodyRaycasts"]
collision_layer = 0

[node name="Left" type="CollisionShape3D" parent="BodyRaycasts/WallRunChecks"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_ovg4i")

[node name="Right" type="CollisionShape3D" parent="BodyRaycasts/WallRunChecks"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, 0, 0)
shape = SubResource("SeparationRayShape3D_ovg4i")

[node name="Feet" type="RayCast3D" parent="BodyRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, 0, -1)

[node name="Head" type="RayCast3D" parent="BodyRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -1)

[node name="BodyRight" type="RayCast3D" parent="BodyRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
target_position = Vector3(0, 0, -1)

[node name="BodyMid" type="RayCast3D" parent="BodyRaycasts"]
target_position = Vector3(0, 0, -1)

[node name="BodyLeft" type="RayCast3D" parent="BodyRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
target_position = Vector3(0, 0, -1)

[node name="MovementInputVector" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_1ie0h")
negative_x_key = &"player.move_left"
positive_x_key = &"player.move_right"
negative_y_key = &"player.move_up"
positive_y_key = &"player.move_down"
negative_z_key = &"player.move_up"
positive_z_key = &"player.move_down"
metadata/_custom_type_script = "uid://dtv0gpk5iy5tr"

[node name="MouseLookInputVector" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_5u6hq")
mouse_captured = true
metadata/_custom_type_script = "uid://b1rqvgva11iaq"

[node name="KeyLookInputVector" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_1ie0h")
negative_x_key = &"player.look_left"
positive_x_key = &"player.look_right"
negative_y_key = &"player.look_up"
positive_y_key = &"player.look_down"
sensitivity = 3.0
deadzone = 0.01
metadata/_custom_type_script = "uid://dtv0gpk5iy5tr"

[node name="QuakeMovementComponent3D" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_d4qa6")
custom_process_integration = true
metadata/_custom_type_script = "uid://ck25us5318jyx"

[node name="StateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_ss7kx")
_init_state = &"Idle"
_states = Array[ExtResource("8_1murt")]([SubResource("Resource_j0oqr"), SubResource("Resource_ovg4i"), SubResource("Resource_7wli1"), SubResource("Resource_5sj0x"), SubResource("Resource_xy2vv"), SubResource("Resource_r4dfn"), SubResource("Resource_70kwc"), SubResource("Resource_yywfu"), SubResource("Resource_pcd0u"), SubResource("Resource_w3p2j")])
metadata/_custom_type_script = "uid://wcqwkfjsc6e5"

[node name="VisualComponent" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="MinimapMarker" type="MeshInstance3D" parent="VisualComponent"]
transform = Transform3D(0.666, 0, 0, 0, -8.742278e-08, 0.666, 0, -2, -2.9111785e-08, 0, 0, 0)
layers = 128
material_override = SubResource("StandardMaterial3D_7wli1")
mesh = SubResource("PrismMesh_j0oqr")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="VisualComponent"]
transform = Transform3D(0.52914715, 0, 0, 0, -4.8082526e-08, 0.3, 0, -1.1, -1.3113417e-08, 0, -1, 0)
layers = 2
material_override = SubResource("StandardMaterial3D_5u6hq")
mesh = SubResource("PrismMesh_5u6hq")
skeleton = NodePath("../..")

[node name="ClientHUD" parent="." instance=ExtResource("11_7wli1")]
unique_name_in_owner = true

[connection signal="body_entered" from="BodyRaycasts/WallRunChecks" to="." method="_on_wall_run_checks_body_entered"]
[connection signal="body_exited" from="BodyRaycasts/WallRunChecks" to="." method="_on_wall_run_checks_body_exited"]
